css background on ios fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -27,16 +27,25 @@
 } */
 
 body {
-  background-image: url('https://accademia-italiana.it/wp-content/webp-express/webp-images/uploads/2024/09/napoli-1.jpg.webp');
-  background-color: var(--background);
-  background-position: bottom;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100vh;
+}
+
+body:after{
+      background-color: var(--background);
+      content:"";
+      position:fixed; /* stretch a fixed position to the whole screen */
+      top:0;
+      height:100vh; /* fix for mobile browser address bar appearing disappearing */
+      left:0;
+      right:0;
+      z-index:-1; /* needed to keep in the background */
+      background: url('https://accademia-italiana.it/wp-content/webp-express/webp-images/uploads/2024/09/napoli-1.jpg.webp') center center;
+      -webkit-background-size: cover;
+      -moz-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
 }
 
 main {
